--- a/src/views/recovery-password.handlebars
+++ b/src/views/recovery-password.handlebars
@@ -1,15 +1,13 @@
 <article>
-  <form action="/api/sessions/login" method="post">
+  <form action="/api/sessions/recovery-password" method="post">
     <header>
-      <h1>Inicio de sesion</h1>
+      <h1>Recuperar contraseña 😁</h1>
     </header>
     <input type="email" name="email" placeholder="Correo" required>
     <input type="password" name="password" placeholder="Contraseña" required>
-    <a href="/recovery-password">Olvidé mi contraseña</a>
     <footer>
       <input type="submit" value="Entrar">
-      <a href="/api/sessions/github" role="button">Entrar con Github</a>
     </footer>
-    <a href="/register">Quiero registrarme</a>
+    <a href="/login">Iniciar Sesión</a>
   </form>
 </article>
