Segunda práctica integradora

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,5 +1,5 @@
 <article>
-  <form action="/api/sessions/login" method="post">
+  <form action="/api/auth/login" method="post">
     <header>
       <h1>Inicio de sesion</h1>
     </header>
@@ -8,7 +8,7 @@
     <a href="/recovery-password">Olvidé mi contraseña</a>
     <footer>
       <input type="submit" value="Entrar">
-      <a href="/api/sessions/github" role="button">Entrar con Github</a>
+      <!--a href="/api/sessions/github" role="button">Entrar con Github</a-->
     </footer>
     <a href="/register">Quiero registrarme</a>
   </form>
