--- a/backend/src/views/recovery-password.handlebars
+++ b/backend/src/views/recovery-password.handlebars
@@ -1,13 +1,20 @@
 <article>
-  <form action="/api/sessions/recovery-password" method="post">
+  <form action="/api/auth/recovery-password" method="post">
     <header>
       <h1>Recuperar contraseña 😁</h1>
     </header>
-    <input type="email" name="email" placeholder="Correo" required>
     <input type="password" name="password" placeholder="Contraseña" required>
+    <input type="text" id="token" name="token" hidden >
     <footer>
-      <input type="submit" value="Entrar">
+      <input type="submit" value="Cambiar Contraseña">
     </footer>
     <a href="/login">Iniciar Sesión</a>
   </form>
 </article>
+
+<script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const token = urlParams.get('token');
+    const tokenInput = document.getElementById('token');
+    tokenInput.value = token;
+</script>
