--- a/backend/src/views/carts.handlebars
+++ b/backend/src/views/carts.handlebars
@@ -1,3 +1,22 @@
+<article>
+  <header>
+    <h1>Te damos la bienvenida</h1>
+  </header>
+  <p><strong>Id:</strong> {{userSession._id}}</p>
+  <p><strong>Nombre:</strong> {{userSession.first_name}}</p>
+  <p><strong>Apellido:</strong> {{userSession.last_name}}</p>
+  <p><strong>Correo:</strong> {{userSession.email}}</p>
+  <p><strong>Edad:</strong> {{userSession.age}}</p>
+  <p><strong>Rol:</strong> {{userSession.role}}</p>
+  <footer> 
+     {{#if comprarBolean}}
+     <a href="/carts/{{this.cart}}/purchaser" role="button">Comprar</a>
+    {{/if}}
+  
+     <a href="/products" role="button">Volver</a>
+  </footer>
+</article>
+
 <h1>Carrito # {{cart}}</h1>
 
   <table>
@@ -7,8 +26,6 @@
       <th scope="col">Descripcion</th>
       <th scope="col">Precio</th>
       <th scope="col">Link imagen</th>
-      <th scope="col">Codigo</th>
-      <th scope="col">Stock</th>
       <th scope="col">Categoria</th>
       <th scope="col">Estado</th>
       <th scope="col">Quantity</th>
@@ -21,8 +38,6 @@
         <td>{{this.product.description}}</td>
         <td>{{this.product.price}}</td>
         <td>{{this.product.thumbnail}}</td>
-        <td>{{this.product.code}}</td>
-        <td>{{this.product.stock}}</td>
         <td>{{this.product.category}}</td>
         <td>{{#if this.product.status}}Habilitado {{else}}Deshabilitado{{/if}}</td>
         <td>{{this.quantity}}</td>
