Entrega Final Ok

--- a/src/views/users.handlebars
+++ b/src/views/users.handlebars
@@ -9,6 +9,7 @@
   <p><strong>Rol:</strong> {{userSession.role}}</p>
   <footer>
     <a href="/api/session/logout" role="button">Cerrar Sesión</a>
+    <a href="/products" role="button">Volver</a>
   </footer>
 </article>
 
